# YARD

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: app-release.apk  output-metadata.json
app/src/androidTest/java/com/android1500/yard/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp
app/src/main/java/com/android1500/yard/: App.kt  CheckForRoot.kt  MainActivity.kt  ResultIconView.kt  RootItemAdapter.kt  RootItemResult.kt
app/src/main/jni/: Android.mk  Application.mk  app.cpp
app/src/main/res/drawable/: ic_baseline_check_circle_outline_24.xml  ic_launcher_foreground.xml  ic_outline_cancel_24.xml
app/src/main/res/layout/: activity_main.xml  device_view.xml  rootcheck_view.xml
app/src/main/res/values/: bools.xml  colors.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/com/android1500/yard/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/androidTest/java/com/android1500/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/java/com/android1500/nativelib/: NativeLib.kt
nativelib/src/test/java/com/android1500/nativelib/: ExampleUnitTest.kt
